Clean docs / Set right version / Add cache to .gitignore

--- a/Language/de.json
+++ b/Language/de.json
@@ -42,7 +42,12 @@
     "config_language_label": "Anwendungssprache",
     "config_default_server_label": "Standardserver",
     "config_default_season_label": "Standard-Saison",
-    "config_server_season_group_title": "Server & Saison",
+    "config_default_realm_label": "Standard-Reich",
+    "config_manual_column_resize_label": "Manuelle Spaltengrößenanpassung",
+    "config_season_group_title": "Server-Konfiguration",
+    "config_paths_group_title": "Ordnerpfade",
+    "config_general_group_title": "Allgemeine Einstellungen",
+    "config_debug_group_title": "Debug",
     "language_name": "Deutsch",
     "config_show_debug_window_label": "Debug-Fenster beim Start anzeigen",
     "debug_window_title": "Debug-Konsole",
@@ -107,10 +112,18 @@
     "about_dialog_title": "Über {app_name}",
     "about_dialog_content": "Anwendung: {app_name}\nVersion: {version}\nErsteller: Ewoline\n\nCharakterverwaltung für Dark Age of Camelot",
     "status_bar_selection_count": "{count} von {total} Charakter(e) ausgewählt",
+    "rename_char_dialog_title": "Charakter umbenennen",
+    "rename_char_dialog_prompt": "Neuer Name:",
     "new_char_page_prompt": "Seite:",
     "new_char_guild_prompt": "Gilde:",
     "new_char_level_prompt": "Stufe:",
     "new_char_race_prompt": "Rasse:",
     "new_char_class_prompt": "Klasse:",
-    "invalid_race_class_combo": "Die Rasse {race} kann nicht die Klasse {class} spielen"
+    "invalid_race_class_combo": "Die Rasse {race} kann nicht die Klasse {class} spielen",
+    "realm_albion": "Albion",
+    "realm_hibernia": "Hibernia",
+    "realm_midgard": "Midgard",
+    "bulk_actions_group_title": "Massenaktionen",
+    "bulk_action_delete": "Auswahl löschen",
+    "bulk_action_execute_button": "Ausführen"
 }
