--- a/Language/en.json
+++ b/Language/en.json
@@ -41,7 +41,12 @@
     "config_language_label": "Application Language",
     "config_default_server_label": "Default Server",
     "config_default_season_label": "Default Season",
-    "config_server_season_group_title": "Server & Season",
+    "config_default_realm_label": "Default Realm",
+    "config_manual_column_resize_label": "Manual column resize mode",
+    "config_season_group_title": "Server Configuration",
+    "config_paths_group_title": "Folder Paths",
+    "config_general_group_title": "General Settings",
+    "config_debug_group_title": "Debug",
     "language_name": "English",
     "config_show_debug_window_label": "Show debug window on startup",
     "debug_window_title": "Debug Console",
@@ -106,10 +111,19 @@
     "about_dialog_title": "About {app_name}",
     "about_dialog_content": "Application: {app_name}\nVersion: {version}\nCreator: Ewoline\n\nCharacter manager for Dark Age of Camelot",
     "status_bar_selection_count": "{count} of {total} character(s) selected",
+    "rename_char_dialog_title": "Rename Character",
+    "rename_char_dialog_prompt": "New name:",
     "new_char_page_prompt": "Page:",
     "new_char_guild_prompt": "Guild:",
     "new_char_level_prompt": "Level:",
     "new_char_race_prompt": "Race:",
     "new_char_class_prompt": "Class:",
-    "invalid_race_class_combo": "The {race} race cannot play the {class} class"
+    "invalid_race_class_combo": "The {race} race cannot play the {class} class",
+    "realm_albion": "Albion",
+    "realm_hibernia": "Hibernia",
+    "realm_midgard": "Midgard",
+    "bulk_actions_group_title": "Bulk Actions",
+    "bulk_action_delete": "Delete Selection",
+    "bulk_action_execute_button": "Execute",
+    "create_char_tooltip": "Create a new character"
 }
