--- a/Language/fr.json
+++ b/Language/fr.json
@@ -42,7 +42,12 @@
     "config_language_label": "Langue de l'application",
     "config_default_server_label": "Serveur par défaut",
     "config_default_season_label": "Saison par défaut",
-    "config_server_season_group_title": "Serveur & Saison",
+    "config_default_realm_label": "Royaume par défaut",
+    "config_manual_column_resize_label": "Gestion manuelle de la taille des colonnes",
+    "config_season_group_title": "Configuration Serveur",
+    "config_paths_group_title": "Chemins des dossiers",
+    "config_general_group_title": "Paramètres généraux",
+    "config_debug_group_title": "Debug",
     "language_name": "Français",
     "config_show_debug_window_label": "Afficher la fenêtre de débogage au démarrage",
     "debug_window_title": "Console de débogage",
