Add template section on character (alpha version) / Add race + class column / Clean some usless code

--- a/Language/de.json
+++ b/Language/de.json
@@ -82,7 +82,7 @@
     "context_menu_delete": "Löschen",
     "context_menu_rename": "Umbenennen",
     "context_menu_duplicate": "Duplizieren",
-    "context_menu_armor_management": "📁 Rüstungsverwaltung",
+    "context_menu_armor_management": "Rüstungsverwaltung",
     "duplicate_char_dialog_title": "Charakter duplizieren",
     "duplicate_char_dialog_prompt": "Name des neuen Charakters:",
     "column_selection": "Auswahl",
@@ -103,6 +103,8 @@
     "column_realm_title": "Reichstitel",
     "column_page": "Seite",
     "column_guild": "Gilde",
+    "column_class": "Klasse",
+    "column_race": "Rasse",
     "menu_file": "Datei",
     "menu_file_new_character": "Neuer Charakter",
     "menu_file_settings": "Einstellungen",
