--- a/Language/en.json
+++ b/Language/en.json
@@ -81,7 +81,7 @@
     "context_menu_delete": "Delete",
     "context_menu_rename": "Rename",
     "context_menu_duplicate": "Duplicate",
-    "context_menu_armor_management": "📁 Armor Management",
+    "context_menu_armor_management": "Armor Management",
     "duplicate_char_dialog_title": "Duplicate Character",
     "duplicate_char_dialog_prompt": "New character name:",
     "column_selection": "Selection",
@@ -102,6 +102,8 @@
     "column_realm_title": "Realm Title",
     "column_page": "Page",
     "column_guild": "Guild",
+    "column_class": "Class",
+    "column_race": "Race",
     "menu_file": "File",
     "menu_file_new_character": "New Character",
     "menu_file_settings": "Settings",
