--- a/Language/fr.json
+++ b/Language/fr.json
@@ -77,6 +77,8 @@
     "column_realm_title": "Titre",
     "column_page": "Page",
     "column_guild": "Guilde",
+    "column_class": "Classe",
+    "column_race": "Race",
     "char_sheet_realm_rank": "Rang de Royaume :",
     "character_sheet_title": "Feuille de personnage - {name}",
     "column_action": "Action",
@@ -85,7 +87,7 @@
     "context_menu_delete": "Supprimer",
     "context_menu_rename": "Renommer",
     "context_menu_duplicate": "Dupliquer",
-    "context_menu_armor_management": "📁 Gestion des armures",
+    "context_menu_armor_management": "Gestion des armures",
     "duplicate_char_dialog_title": "Dupliquer le personnage",
     "duplicate_char_dialog_prompt": "Nom du nouveau personnage :",
     "rename_char_dialog_title": "Renommer le personnage",
