Change Character folder strcutre / Add auto migration for the current Charcaters folder / Add backup charcaters migration/ add disclaimer for migration

--- a/Language/fr.json
+++ b/Language/fr.json
@@ -122,6 +122,7 @@
     "menu_view_columns": "Colonnes",
     "menu_help": "Aide",
     "menu_help_about": "À propos",
+    "menu_help_migrate": "Migrer la structure des dossiers",
     "about_dialog_title": "À propos de {app_name}",
     "about_dialog_content": "Application : {app_name}\nVersion : {version}\nCréateur : Ewoline\n\nGestionnaire de personnages pour Dark Age of Camelot",
     "status_bar_selection_count": "{count} sur {total} personnage(s) sélectionné(s)",
@@ -136,6 +137,24 @@
     "resistances_button": "Résistances",
     "config_misc_group_title": "Divers",
     "config_disable_disclaimer_label": "Désactiver le message d'avertissement au démarrage",
+    "migration_dialog_title": "Migration de la structure des dossiers",
+    "migration_in_progress": "Migration en cours...",
+    "migration_success": "Migration réussie !",
+    "migration_error": "Erreur de migration",
+    "migration_already_done": "La migration a déjà été effectuée",
+    "migration_not_needed": "Aucune migration nécessaire",
+    "migration_confirm_title": "Confirmer la migration",
+    "migration_confirm_message": "Cette opération va réorganiser vos dossiers de personnages.\n\nAncienne structure : Characters/Royaume/Personnage\nNouvelle structure : Characters/Saison/Royaume/Personnage\n\nVoulez-vous continuer ?",
+    "migration_startup_title": "Migration de structure requise / Structure Migration Required / Strukturmigration erforderlich",
+    "migration_startup_message_fr": "🇫🇷 FRANÇAIS :\nSuite à une modification de structure dans le répertoire des personnages, l'application va restructurer le répertoire \"Characters\".\n\n📁 Ancienne structure : Characters/Royaume/Personnage.json\n📁 Nouvelle structure : Characters/Saison/Royaume/Personnage.json",
+    "migration_startup_message_en": "🇬🇧 ENGLISH:\nDue to a structure modification in the character directory, the application will restructure the \"Characters\" folder.\n\n📁 Old structure: Characters/Realm/Character.json\n📁 New structure: Characters/Season/Realm/Character.json",
+    "migration_startup_message_de": "🇩🇪 DEUTSCH:\nAufgrund einer Strukturänderung im Charakterverzeichnis wird die Anwendung das \"Characters\"-Verzeichnis umstrukturieren.\n\n📁 Alte Struktur: Characters/Realm/Character.json\n📁 Neue Struktur: Characters/Season/Realm/Character.json",
+    "migration_backup_location": "💾 Emplacement de la sauvegarde / Backup location / Sicherungsort:",
+    "migration_warning": "⚠️ Si vous cliquez sur 'Annuler', l'application se fermera sans effectuer de modifications.\n⚠️ If you click 'Cancel', the application will close without making any changes.\n⚠️ Wenn Sie auf 'Abbrechen' klicken, wird die Anwendung geschlossen, ohne Änderungen vorzunehmen.",
+    "migration_question": "Voulez-vous continuer avec la migration ?\nDo you want to proceed with the migration?\nMöchten Sie mit der Migration fortfahren?",
+    "migration_cancelled_title": "Migration annulée / Migration Cancelled / Migration abgebrochen",
+    "migration_cancelled_message": "🇫🇷 Migration annulée, fermeture du programme.\n\n🇬🇧 Migration cancelled, closing program.\n\n🇩🇪 Migration abgebrochen, Programm wird geschlossen.",
+    "migration_backup_info": "Sauvegarde en cours...",
     "disclaimer_title": "Alpha Version / Version Alpha / Alpha-Version",
     "disclaimer_message": "🇫🇷 FRANÇAIS :\nCe logiciel est une version Alpha en cours de programmation.\nIl est donc soumis à des changements.\n\nCette application est un outil de gestion de personnages pour Dark Age of Camelot.\nLes données sont stockées localement sur votre machine.\n\n🇬🇧 ENGLISH:\nThis software is an Alpha version currently under development.\nIt is therefore subject to changes.\n\nThis application is a character management tool for Dark Age of Camelot.\nData is stored locally on your machine.\n\n🇩🇪 DEUTSCH:\nDiese Software ist eine Alpha-Version, die sich derzeit in der Entwicklung befindet.\nSie unterliegt daher Änderungen.\n\nDiese Anwendung ist ein Charakterverwaltungstool für Dark Age of Camelot.\nDaten werden lokal auf Ihrem Computer gespeichert.\n\n───────────────────────────────\nVous pouvez désactiver ce message dans Paramètres > Divers.\nYou can disable this message in Settings > Miscellaneous.\nSie können diese Meldung in Einstellungen > Verschiedenes deaktivieren."
 }
