--- a/Language/de.json
+++ b/Language/de.json
@@ -149,12 +149,20 @@
     "migration_startup_message_fr": "🇫🇷 FRANÇAIS :\nSuite à une modification de structure dans le répertoire des personnages, l'application va restructurer le répertoire \"Characters\".\n\n📁 Ancienne structure : Characters/Royaume/Personnage.json\n📁 Nouvelle structure : Characters/Saison/Royaume/Personnage.json",
     "migration_startup_message_en": "🇬🇧 ENGLISH:\nDue to a structure modification in the character directory, the application will restructure the \"Characters\" folder.\n\n📁 Old structure: Characters/Realm/Character.json\n📁 New structure: Characters/Season/Realm/Character.json",
     "migration_startup_message_de": "🇩🇪 DEUTSCH:\nAufgrund einer Strukturänderung im Charakterverzeichnis wird die Anwendung das \"Characters\"-Verzeichnis umstrukturieren.\n\n📁 Alte Struktur: Characters/Realm/Character.json\n📁 Neue Struktur: Characters/Season/Realm/Character.json",
-    "migration_backup_location": "💾 Emplacement de la sauvegarde / Backup location / Sicherungsort:",
+    "migration_backup_location": "Sicherungsort:",
+    "migration_success_message": "Migration von {count} Charakter(en) erfolgreich",
+    "migration_no_characters": "Keine Charaktere zu migrieren",
+    "migration_rollback_info": "Änderungen werden rückgängig gemacht, um Ihre Daten zu schützen...",
+    "migration_data_safe": "Ihre Originaldaten sind sicher",
     "migration_warning": "⚠️ Si vous cliquez sur 'Annuler', l'application se fermera sans effectuer de modifications.\n⚠️ If you click 'Cancel', the application will close without making any changes.\n⚠️ Wenn Sie auf 'Abbrechen' klicken, wird die Anwendung geschlossen, ohne Änderungen vorzunehmen.",
     "migration_question": "Voulez-vous continuer avec la migration ?\nDo you want to proceed with the migration?\nMöchten Sie mit der Migration fortfahren?",
     "migration_cancelled_title": "Migration annulée / Migration Cancelled / Migration abgebrochen",
     "migration_cancelled_message": "🇫🇷 Migration annulée, fermeture du programme.\n\n🇬🇧 Migration cancelled, closing program.\n\n🇩🇪 Migration abgebrochen, Programm wird geschlossen.",
     "migration_backup_info": "Sicherung wird erstellt...",
+    "migration_path_change_title": "⚠️ Migration erforderlich",
+    "migration_path_change_message": "Der neue Charakterordner verwendet die alte Struktur.\n\n📁 Erkannte Struktur: Characters/Realm/\n✅ Erforderliche Struktur: Characters/Season/Realm/\n\nBitte starten Sie die Anwendung neu, um die automatische Migration durchzuführen.\nEine ZIP-Sicherung wird vor der Migration erstellt.",
+    "migration_path_change_question": "Der neue Charakterordner verwendet die alte Struktur.\n\n📁 Erkannte Struktur: Characters/Realm/\n✅ Erforderliche Struktur: Characters/Season/Realm/\n\nMöchten Sie die Migration jetzt durchführen?\n💾 Eine ZIP-Sicherung wird automatisch vor der Migration erstellt.",
+    "migration_path_change_later": "Migration verschoben. Sie können die Migration später über das Menü Hilfe > Ordnerstruktur migrieren durchführen.",
     "disclaimer_title": "Alpha Version / Version Alpha / Alpha-Version",
     "disclaimer_message": "🇫🇷 FRANÇAIS :\nCe logiciel est une version Alpha en cours de programmation.\nIl est donc soumis à des changements.\n\nCette application est un outil de gestion de personnages pour Dark Age of Camelot.\nLes données sont stockées localement sur votre machine.\n\n🇬🇧 ENGLISH:\nThis software is an Alpha version currently under development.\nIt is therefore subject to changes.\n\nThis application is a character management tool for Dark Age of Camelot.\nData is stored locally on your machine.\n\n🇩🇪 DEUTSCH:\nDiese Software ist eine Alpha-Version, die sich derzeit in der Entwicklung befindet.\nSie unterliegt daher Änderungen.\n\nDiese Anwendung ist ein Charakterverwaltungstool für Dark Age of Camelot.\nDaten werden lokal auf Ihrem Computer gespeichert.\n\n───────────────────────────────\nVous pouvez désactiver ce message dans Paramètres > Divers.\nYou can disable this message in Settings > Miscellaneous.\nSie können diese Meldung in Einstellungen > Verschiedenes deaktivieren."
 }
