--- a/Language/de.json
+++ b/Language/de.json
@@ -116,6 +116,7 @@
     "menu_help": "Hilfe",
     "menu_help_about": "Über",
     "menu_help_migrate": "Ordnerstruktur migrieren",
+    "menu_help_eden_debug": "🌐 Eden Debug",
     "about_dialog_title": "Über {app_name}",
     "about_dialog_content": "Anwendung: {app_name}\nVersion: {version}\nErsteller: Ewoline\n\nCharakterverwaltung für Dark Age of Camelot",
     "status_bar_selection_count": "{count} von {total} Charakter(e) ausgewählt",
