Create Help / Fix bug

--- a/Language/de.json
+++ b/Language/de.json
@@ -114,6 +114,10 @@
     "menu_view": "Ansicht",
     "menu_view_columns": "Spalten",
     "menu_help": "Hilfe",
+    "menu_help_documentation": "📚 Dokumentation",
+    "menu_help_create_character": "Charakter manuell erstellen",
+    "menu_help_edit_character": "Charakter bearbeiten",
+    "menu_help_delete_character": "Charakter löschen",
     "menu_help_about": "Über",
     "menu_help_migrate": "Ordnerstruktur migrieren",
     "menu_help_eden_debug": "🌐 Eden Debug",
