--- a/Language/en.json
+++ b/Language/en.json
@@ -113,6 +113,10 @@
     "menu_view": "View",
     "menu_view_columns": "Columns",
     "menu_help": "Help",
+    "menu_help_documentation": "📚 Documentation",
+    "menu_help_create_character": "Create a Character Manually",
+    "menu_help_edit_character": "Edit a Character",
+    "menu_help_delete_character": "Delete a Character",
     "menu_help_about": "About",
     "menu_help_migrate": "Migrate folder structure",
     "menu_help_eden_debug": "🌐 Eden Debug",
