--- a/Language/fr.json
+++ b/Language/fr.json
@@ -121,6 +121,10 @@
     "menu_view": "Affichage",
     "menu_view_columns": "Colonnes",
     "menu_help": "Aide",
+    "menu_help_documentation": "📚 Documentation",
+    "menu_help_create_character": "Créer un personnage manuellement",
+    "menu_help_edit_character": "Modifier un personnage",
+    "menu_help_delete_character": "Supprimer un personnage",
     "menu_help_about": "À propos",
     "menu_help_migrate": "Migrer la structure des dossiers",
     "menu_help_eden_debug": "🌐 Debug Eden",
