Fix bug RR <-> Classes , Fix online update characters

--- a/Language/de.json
+++ b/Language/de.json
@@ -83,6 +83,13 @@
     "context_menu_rename": "Umbenennen",
     "context_menu_duplicate": "Duplizieren",
     "context_menu_armor_management": "Rüstungsverwaltung",
+    "context_menu_update_from_herald": "🔄 Vom Herald aktualisieren",
+    "update_char_no_url": "Für diesen Charakter ist keine Herald-URL konfiguriert.",
+    "update_char_progress": "Daten vom Herald werden abgerufen...",
+    "update_char_error": "Fehler beim Abrufen der Daten",
+    "update_char_no_changes": "Keine Änderungen erkannt. Der Charakter ist bereits aktuell.",
+    "update_char_success": "Charakter erfolgreich aktualisiert!",
+    "update_char_cancelled": "Aktualisierung abgebrochen.",
     "duplicate_char_dialog_title": "Charakter duplizieren",
     "duplicate_char_dialog_prompt": "Name des neuen Charakters:",
     "column_selection": "Auswahl",
@@ -105,6 +112,7 @@
     "column_guild": "Gilde",
     "column_class": "Klasse",
     "column_race": "Rasse",
+    "column_url": "Herald-URL",
     "menu_file": "Datei",
     "menu_file_new_character": "Neuer Charakter",
     "menu_file_settings": "Einstellungen",
