--- a/Language/en.json
+++ b/Language/en.json
@@ -82,6 +82,13 @@
     "context_menu_rename": "Rename",
     "context_menu_duplicate": "Duplicate",
     "context_menu_armor_management": "Armor Management",
+    "context_menu_update_from_herald": "🔄 Update from Herald",
+    "update_char_no_url": "No Herald URL is configured for this character.",
+    "update_char_progress": "Fetching data from Herald...",
+    "update_char_error": "Error fetching data",
+    "update_char_no_changes": "No changes detected. The character is already up to date.",
+    "update_char_success": "Character updated successfully!",
+    "update_char_cancelled": "Update cancelled.",
     "duplicate_char_dialog_title": "Duplicate Character",
     "duplicate_char_dialog_prompt": "New character name:",
     "column_selection": "Selection",
@@ -104,6 +111,7 @@
     "column_guild": "Guild",
     "column_class": "Class",
     "column_race": "Race",
+    "column_url": "Herald URL",
     "menu_file": "File",
     "menu_file_new_character": "New Character",
     "menu_file_settings": "Settings",
