--- a/Language/fr.json
+++ b/Language/fr.json
@@ -79,6 +79,7 @@
     "column_guild": "Guilde",
     "column_class": "Classe",
     "column_race": "Race",
+    "column_url": "URL Herald",
     "char_sheet_realm_rank": "Rang de Royaume :",
     "character_sheet_title": "Feuille de personnage - {name}",
     "column_action": "Action",
@@ -88,6 +89,13 @@
     "context_menu_rename": "Renommer",
     "context_menu_duplicate": "Dupliquer",
     "context_menu_armor_management": "Gestion des armures",
+    "context_menu_update_from_herald": "🔄 Mettre à jour depuis Herald",
+    "update_char_no_url": "Aucune URL Herald n'est configurée pour ce personnage.",
+    "update_char_progress": "Récupération des données depuis Herald...",
+    "update_char_error": "Erreur lors de la récupération des données",
+    "update_char_no_changes": "Aucune modification détectée. Le personnage est déjà à jour.",
+    "update_char_success": "Le personnage a été mis à jour avec succès !",
+    "update_char_cancelled": "Mise à jour annulée.",
     "duplicate_char_dialog_title": "Dupliquer le personnage",
     "duplicate_char_dialog_prompt": "Nom du nouveau personnage :",
     "rename_char_dialog_title": "Renommer le personnage",
