Add cookies folder in configurtion menu / Add update import / Update log system / Fix type

--- a/Language/de.json
+++ b/Language/de.json
@@ -39,6 +39,10 @@
     "config_debug_mode_label": "Debug-Modus aktivieren (erstellt debug.log)",
     "config_log_path_label": "Log-Verzeichnis",
     "select_log_folder_dialog_title": "Log-Ordner auswählen",
+    "config_armor_path_label": "Rüstungsverzeichnis",
+    "select_armor_folder_dialog_title": "Rüstungsordner auswählen",
+    "config_cookies_path_label": "Herald-Cookie-Verzeichnis",
+    "select_cookies_folder_dialog_title": "Cookie-Ordner auswählen",
     "config_language_label": "Anwendungssprache",
     "config_default_server_label": "Standardserver",
     "config_default_season_label": "Standard-Saison",
