--- a/Language/en.json
+++ b/Language/en.json
@@ -38,6 +38,10 @@
     "config_debug_mode_label": "Enable debug mode (creates debug.log)",
     "config_log_path_label": "Log Directory",
     "select_log_folder_dialog_title": "Select Log Folder",
+    "config_armor_path_label": "Armor Directory",
+    "select_armor_folder_dialog_title": "Select Armor Folder",
+    "config_cookies_path_label": "Herald Cookies Directory",
+    "select_cookies_folder_dialog_title": "Select Cookies Folder",
     "config_language_label": "Application Language",
     "config_default_server_label": "Default Server",
     "config_default_season_label": "Default Season",
