--- a/Language/fr.json
+++ b/Language/fr.json
@@ -39,6 +39,10 @@
     "config_debug_mode_label": "Activer le mode débogage (crée debug.log)",
     "config_log_path_label": "Répertoire des logs",
     "select_log_folder_dialog_title": "Sélectionner le dossier des logs",
+    "config_armor_path_label": "Répertoire des armures",
+    "select_armor_folder_dialog_title": "Sélectionner le dossier des armures",
+    "config_cookies_path_label": "Répertoire des cookies Herald",
+    "select_cookies_folder_dialog_title": "Sélectionner le dossier des cookies",
     "config_language_label": "Langue de l'application",
     "config_default_server_label": "Serveur par défaut",
     "config_default_season_label": "Saison par défaut",
