First commit for backup function

--- a/Language/de.json
+++ b/Language/de.json
@@ -181,5 +181,31 @@
     "migration_path_change_question": "Der neue Charakterordner verwendet die alte Struktur.\n\n📁 Erkannte Struktur: Characters/Realm/\n✅ Erforderliche Struktur: Characters/Season/Realm/\n\nMöchten Sie die Migration jetzt durchführen?\n💾 Eine ZIP-Sicherung wird automatisch vor der Migration erstellt.",
     "migration_path_change_later": "Migration verschoben. Sie können die Migration später über das Menü Hilfe > Ordnerstruktur migrieren durchführen.",
     "disclaimer_title": "Alpha Version / Version Alpha / Alpha-Version",
-    "disclaimer_message": "🇫🇷 FRANÇAIS :\nCe logiciel est une version Alpha en cours de programmation.\nIl est donc soumis à des changements.\n\nCette application est un outil de gestion de personnages pour Dark Age of Camelot.\nLes données sont stockées localement sur votre machine.\n\n🇬🇧 ENGLISH:\nThis software is an Alpha version currently under development.\nIt is therefore subject to changes.\n\nThis application is a character management tool for Dark Age of Camelot.\nData is stored locally on your machine.\n\n🇩🇪 DEUTSCH:\nDiese Software ist eine Alpha-Version, die sich derzeit in der Entwicklung befindet.\nSie unterliegt daher Änderungen.\n\nDiese Anwendung ist ein Charakterverwaltungstool für Dark Age of Camelot.\nDaten werden lokal auf Ihrem Computer gespeichert.\n\n───────────────────────────────\nVous pouvez désactiver ce message dans Paramètres > Divers.\nYou can disable this message in Settings > Miscellaneous.\nSie können diese Meldung in Einstellungen > Verschiedenes deaktivieren."
+    "disclaimer_message": "🇫🇷 FRANÇAIS :\nCe logiciel est une version Alpha en cours de programmation.\nIl est donc soumis à des changements.\n\nCette application est un outil de gestion de personnages pour Dark Age of Camelot.\nLes données sont stockées localement sur votre machine.\n\n🇬🇧 ENGLISH:\nThis software is an Alpha version currently under development.\nIt is therefore subject to changes.\n\nThis application is a character management tool for Dark Age of Camelot.\nData is stored locally on your machine.\n\n🇩🇪 DEUTSCH:\nDiese Software ist eine Alpha-Version, die sich derzeit in der Entwicklung befindet.\nSie unterliegt daher Änderungen.\n\nDiese Anwendung ist ein Charakterverwaltungstool für Dark Age of Camelot.\nDaten werden lokal auf Ihrem Computer gespeichert.\n\n───────────────────────────────\nVous pouvez désactiver ce message dans Paramètres > Divers.\nYou can disable this message in Settings > Miscellaneous.\nSie können diese Meldung in Einstellungen > Verschiedenes deaktivieren.",
+    "tools_menu": "Werkzeuge",
+    "backup_menu_item": "Sicherung",
+    "backup_settings_title": "Sicherungseinstellungen",
+    "backup_enabled_label": "Automatische Sicherungen aktivieren",
+    "backup_path_label": "Sicherungsort",
+    "backup_path_dialog_title": "Sicherungsordner auswählen",
+    "backup_compress_label": "Sicherungen komprimieren (ZIP)",
+    "backup_compress_tooltip": "Reduziert die Sicherungsgröße",
+    "backup_retention_label": "Aufbewahrungsrichtlinie",
+    "backup_max_count_label": "Maximale Anzahl von Sicherungen:",
+    "backup_max_count_tooltip": "(10 standardmäßig, -1 für unbegrenzt)",
+    "backup_size_limit_label": "Speicherlimit:",
+    "backup_size_limit_tooltip": "(20 MB standardmäßig, -1 für unbegrenzt)",
+    "backup_usage_label": "Aktuelle Nutzung",
+    "backup_recent_label": "Neueste Sicherungen:",
+    "backup_now_button": "Jetzt sichern",
+    "backup_success_title": "Erfolg",
+    "backup_success_message": "Sicherung erstellt: {0}",
+    "backup_error_title": "Fehler",
+    "backup_error_message": "Sicherung fehlgeschlagen: {0}",
+    "backup_invalid_max_count": "Anzahl der Sicherungen muss eine Ganzzahl sein",
+    "backup_invalid_size_limit": "Speicherlimit muss eine Ganzzahl sein",
+    "backup_settings_saved_title": "Einstellungen gespeichert",
+    "backup_settings_saved_message": "Sicherungseinstellungen wurden aktualisiert",
+    "backup_settings_error": "Fehler beim Speichern der Sicherungseinstellungen",
+    "backup_no_backups_yet": "Noch keine Sicherungen"
 }
