--- a/Language/en.json
+++ b/Language/en.json
@@ -181,5 +181,31 @@
     "migration_path_change_question": "The new character folder uses the old structure.\n\n📁 Structure detected: Characters/Realm/\n✅ Required structure: Characters/Season/Realm/\n\nDo you want to perform the migration now?\n💾 A ZIP backup will be created automatically before migration.",
     "migration_path_change_later": "Migration postponed. You can perform the migration later via the Help > Migrate folder structure menu.",
     "disclaimer_title": "Alpha Version / Version Alpha / Alpha-Version",
-    "disclaimer_message": "🇫🇷 FRANÇAIS :\nCe logiciel est une version Alpha en cours de programmation.\nIl est donc soumis à des changements.\n\nCette application est un outil de gestion de personnages pour Dark Age of Camelot.\nLes données sont stockées localement sur votre machine.\n\n🇬🇧 ENGLISH:\nThis software is an Alpha version currently under development.\nIt is therefore subject to changes.\n\nThis application is a character management tool for Dark Age of Camelot.\nData is stored locally on your machine.\n\n🇩🇪 DEUTSCH:\nDiese Software ist eine Alpha-Version, die sich derzeit in der Entwicklung befindet.\nSie unterliegt daher Änderungen.\n\nDiese Anwendung ist ein Charakterverwaltungstool für Dark Age of Camelot.\nDaten werden lokal auf Ihrem Computer gespeichert.\n\n───────────────────────────────\nVous pouvez désactiver ce message dans Paramètres > Divers.\nYou can disable this message in Settings > Miscellaneous.\nSie können diese Meldung in Einstellungen > Verschiedenes deaktivieren."
+    "disclaimer_message": "🇫🇷 FRANÇAIS :\nCe logiciel est une version Alpha en cours de programmation.\nIl est donc soumis à des changements.\n\nCette application est un outil de gestion de personnages pour Dark Age of Camelot.\nLes données sont stockées localement sur votre machine.\n\n🇬🇧 ENGLISH:\nThis software is an Alpha version currently under development.\nIt is therefore subject to changes.\n\nThis application is a character management tool for Dark Age of Camelot.\nData is stored locally on your machine.\n\n🇩🇪 DEUTSCH:\nDiese Software ist eine Alpha-Version, die sich derzeit in der Entwicklung befindet.\nSie unterliegt daher Änderungen.\n\nDiese Anwendung ist ein Charakterverwaltungstool für Dark Age of Camelot.\nDaten werden lokal auf Ihrem Computer gespeichert.\n\n───────────────────────────────\nVous pouvez désactiver ce message dans Paramètres > Divers.\nYou can disable this message in Settings > Miscellaneous.\nSie können diese Meldung in Einstellungen > Verschiedenes deaktivieren.",
+    "tools_menu": "Tools",
+    "backup_menu_item": "Backup",
+    "backup_settings_title": "Backup Settings",
+    "backup_enabled_label": "Enable automatic backups",
+    "backup_path_label": "Backup location",
+    "backup_path_dialog_title": "Select backup folder",
+    "backup_compress_label": "Compress backups (ZIP)",
+    "backup_compress_tooltip": "Reduces backup size",
+    "backup_retention_label": "Retention policy",
+    "backup_max_count_label": "Maximum number of backups:",
+    "backup_max_count_tooltip": "(10 by default, -1 for unlimited)",
+    "backup_size_limit_label": "Storage limit:",
+    "backup_size_limit_tooltip": "(20 MB by default, -1 for unlimited)",
+    "backup_usage_label": "Current usage",
+    "backup_recent_label": "Recent backups:",
+    "backup_now_button": "Backup now",
+    "backup_success_title": "Success",
+    "backup_success_message": "Backup created: {0}",
+    "backup_error_title": "Error",
+    "backup_error_message": "Backup failed: {0}",
+    "backup_invalid_max_count": "Number of backups must be an integer",
+    "backup_invalid_size_limit": "Storage limit must be an integer",
+    "backup_settings_saved_title": "Settings saved",
+    "backup_settings_saved_message": "Backup settings have been updated",
+    "backup_settings_error": "Error saving backup settings",
+    "backup_no_backups_yet": "No backups yet"
 }
