--- a/Language/fr.json
+++ b/Language/fr.json
@@ -181,5 +181,31 @@
     "migration_path_change_question": "Le nouveau dossier de personnages utilise l'ancienne structure.\n\n📁 Structure détectée : Characters/Royaume/\n✅ Structure requise : Characters/Saison/Royaume/\n\nVoulez-vous effectuer la migration maintenant ?\n💾 Une sauvegarde ZIP sera créée automatiquement avant la migration.",
     "migration_path_change_later": "Migration reportée. Vous pouvez effectuer la migration plus tard via le menu Aide > Migrer la structure des dossiers.",
     "disclaimer_title": "Alpha Version / Version Alpha / Alpha-Version",
-    "disclaimer_message": "🇫🇷 FRANÇAIS :\nCe logiciel est une version Alpha en cours de programmation.\nIl est donc soumis à des changements.\n\nCette application est un outil de gestion de personnages pour Dark Age of Camelot.\nLes données sont stockées localement sur votre machine.\n\n🇬🇧 ENGLISH:\nThis software is an Alpha version currently under development.\nIt is therefore subject to changes.\n\nThis application is a character management tool for Dark Age of Camelot.\nData is stored locally on your machine.\n\n🇩🇪 DEUTSCH:\nDiese Software ist eine Alpha-Version, die sich derzeit in der Entwicklung befindet.\nSie unterliegt daher Änderungen.\n\nDiese Anwendung ist ein Charakterverwaltungstool für Dark Age of Camelot.\nDaten werden lokal auf Ihrem Computer gespeichert.\n\n───────────────────────────────\nVous pouvez désactiver ce message dans Paramètres > Divers.\nYou can disable this message in Settings > Miscellaneous.\nSie können diese Meldung in Einstellungen > Verschiedenes deaktivieren."
+    "disclaimer_message": "🇫🇷 FRANÇAIS :\nCe logiciel est une version Alpha en cours de programmation.\nIl est donc soumis à des changements.\n\nCette application est un outil de gestion de personnages pour Dark Age of Camelot.\nLes données sont stockées localement sur votre machine.\n\n🇬🇧 ENGLISH:\nThis software is an Alpha version currently under development.\nIt is therefore subject to changes.\n\nThis application is a character management tool for Dark Age of Camelot.\nData is stored locally on your machine.\n\n🇩🇪 DEUTSCH:\nDiese Software ist eine Alpha-Version, die sich derzeit in der Entwicklung befindet.\nSie unterliegt daher Änderungen.\n\nDiese Anwendung ist ein Charakterverwaltungstool für Dark Age of Camelot.\nDaten werden lokal auf Ihrem Computer gespeichert.\n\n───────────────────────────────\nVous pouvez désactiver ce message dans Paramètres > Divers.\nYou can disable this message in Settings > Miscellaneous.\nSie können diese Meldung in Einstellungen > Verschiedenes deaktivieren.",
+    "tools_menu": "Outils",
+    "backup_menu_item": "Sauvegarde",
+    "backup_settings_title": "Paramètres de sauvegarde",
+    "backup_enabled_label": "Activer les sauvegardes automatiques",
+    "backup_path_label": "Emplacement des sauvegardes",
+    "backup_path_dialog_title": "Sélectionner le dossier de sauvegarde",
+    "backup_compress_label": "Compresser les sauvegardes (ZIP)",
+    "backup_compress_tooltip": "Réduit la taille des sauvegardes",
+    "backup_retention_label": "Politique de rétention",
+    "backup_max_count_label": "Nombre maximum de sauvegardes :",
+    "backup_max_count_tooltip": "(10 par défaut, -1 pour illimité)",
+    "backup_size_limit_label": "Limite de stockage :",
+    "backup_size_limit_tooltip": "(20 MB par défaut, -1 pour illimité)",
+    "backup_usage_label": "Utilisation actuelle",
+    "backup_recent_label": "Dernières sauvegardes :",
+    "backup_now_button": "Sauvegarder maintenant",
+    "backup_success_title": "Succès",
+    "backup_success_message": "Sauvegarde créée : {0}",
+    "backup_error_title": "Erreur",
+    "backup_error_message": "Erreur lors de la sauvegarde : {0}",
+    "backup_invalid_max_count": "Le nombre de sauvegardes doit être un entier",
+    "backup_invalid_size_limit": "La limite de taille doit être un entier",
+    "backup_settings_saved_title": "Paramètres sauvegardés",
+    "backup_settings_saved_message": "Les paramètres de sauvegarde ont été mis à jour",
+    "backup_settings_error": "Erreur lors de la sauvegarde des paramètres",
+    "backup_no_backups_yet": "Aucune sauvegarde pour l'instant"
 }
